# runner

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: test_config.ini
include/: Runner.h
include/common/: logger.hpp
include/fin/: ExchangeInfo.h  Order.h  OrderSizer.h  Signal.h  Symbol.h  SymbolFilter.h  SymbolFilters.h
include/fix/: Broker.h  CoalescingBuffer.h  Feeder.h  MarketDataStore.h
include/market_connection/: Admin.h  Broker.h  Feeder.h  OrderBook.h
include/persistence/: TradePersistence.h
include/strategies/: ArbitragePath.h  IStrategy.h  MatrixPathEvaluator.h  TriangularArb.h  TriangularArbitrage.h
include/strategies/circular_arbitrage/: ArbitragePath.h
src/: Runner.cpp  trader_main.cpp
src/fin/: SymbolFilters.cpp
src/fix/: Broker.cpp  Feeder.cpp
src/market_connection/: Admin.cpp  Broker.cpp  Feeder.cpp
src/persistence/: TradePersistence.cpp
src/strategies/: ArbitragePath.cpp  TriangularArb.cpp  TriangularArbitrage.cpp
src/strategies/circular_arbitrage/: ArbitragePath.cpp  TriangularArbitrage.cpp
